apps/streamie/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamie
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: streamie
---
apiVersion: v1
kind: Service
metadata:
  name: streamie-web
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: streamie-web
---
apiVersion: v1
kind: Service
metadata:
  name: streamie-redis
spec:
  type: LoadBalancer
  ports:
    - port: 56379
      protocol: TCP
      targetPort: 6379
  externalName: redis.streamie.homelab.narze.live
  selector:
    app: streamie-redis
