apps/streamie/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamie
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
    - hosts:
        - streamie-feed.narze.live
      secretName: streamie-feed-tls
  rules:
    - host: streamie.narze.live
      http:
        paths:
          - backend:
              service:
                name: streamie
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: streamie-feed.narze.live
      http:
        paths:
          - backend:
              service:
                name: streamie-web
                port:
                  number: 3000
            path: /
            pathType: Prefix
    # - host: redis.streamie.homelab.narze.live
    #   http:
    #     paths:
    #       - backend:
    #           service:
    #             name: streamie-redis
    #             port:
    #               number: 6379
    #         path: /
    #         pathType: Prefix
